--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
     "postinstall": "curl -s https://raw.githubusercontent.com/reactorcore/pomander/master/bin/install | bash"
   },
   "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.0.0-alpha.2",
     "jquery": "^2.2.1",
     "lodash": "^4.6.1",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
+    "react": "^0.14.9",
+    "react-dom": "^0.14.9",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "underscore": "1.8.3"
+    "underscore": "1.8.3",
+    "webpack": "^3.10.0"
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
